# minimap2-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cobertura.xml  generate_paper_pdf.sh  kseq.h  my_index.mmi  test.mmi
.circleci/: config.yml
.github/: dependabot.yaml
.github/workflows/: build-test-rust-fakeminimap2.yaml  build-test-rust-minimap2-sys.yml  build-test-rust-minimap2.yaml  build-test-rust-minimappers2.yaml  build-test-rust.yml  create-python-release.yaml  draft-pdf.yml
.scripts/: grcov.bash
examples/: channels.rs  rayon.rs
fakeminimap2/: Cargo.toml  README.md  hg38_chr_M.mmi  testing_fake_minimap2_chrM.fasta  testing_r10_fasta.fasta
fakeminimap2/src/: channels.rs  cli.rs  datatypes.rs  main.rs  rayon.rs  state.rs  ui.rs
fakeminimap2/src/state/: mapping_results_store.rs  query_sequences_store.rs  ui_state.rs
fakeminimap2/src/ui/: app_display.rs
minimap2-safe/: Cargo.toml
minimap2-safe/minimap2-sys/: Cargo.toml  build.rs  kseq.h  minimap2.h
minimap2-sys/: Cargo.toml  README.md  TODO.md  bench_compare.sh  build.rs  minimap2.h
minimap2-sys/benches/: threading.rs
minimap2-sys/minimap2/: minimap2
minimap2-sys/src/: bindings.rs  bindings_rust_threads.rs  lib.rs  rust_threads_index.rs
minimappers2/: Cargo.toml  Exampe.ipynb  README.md  build.rs  pixi.toml  pyproject.toml
minimappers2/example/: Exampe.ipynb  pixi.toml
minimappers2/src/: lib.rs  multithreading.rs
minimappers2/test_py/: Untitled.ipynb  test.py
paper/: paper.bib  paper.md
src/: bindings.rs  fasta.rs  fastq.rs  htslib.rs  lib.rs
test_data/: cDNA.fasta  cDNA_reads.fa  cDNA_reads.fq  cDNA_vs_genome.sam  gDNA_reads.fa  gDNA_reads.fq  gDNA_vs_genome.paf  gDNA_vs_genome.sam  genome.fa  pair_1.fq  pair_2.fq  pair_vs_genome.sam  problematic.fasta  query.fa  query_vs_test_data.paf  query_vs_test_data.sam  test_data.fasta
tests/: htslib.rs
