[package]
name = "minimap2-temp"
version = "0.1.32+minimap2.2.28"
edition = "2021"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Bindings to libminimap2"
repository = "https://github.com/rob-p/minimap2-rs"
categories = ["science"]
keywords = ["bioinformatics", "fasta", "alignment", "fastq"]
exclude = [
  "**/*.fasta",
  "*.profdata",
  "*.mmi",
  "**/*.mmi",
  "/minimap2-sys/",
  "/minimappers2/",
  "/fakeminimap2",
  "/test_data/",
  ".*",
]

[workspace]

members = []

exclude = ["minimappers2", "fakeminimap2", "minimap2-sys"]

[dependencies]
libc = "0.2"
simdutf8 = { version = "0.1", optional = true }
needletail = { version = "0.5", optional = true, default-features = false }

# Dep for development
# minimap2-sys = { path = "./minimap2-sys" }
minimap2-sys = "0.1.19"
rust-htslib = { version = "0.47", default-features = false, optional = true }

[dev-dependencies]
rayon = "1.10"

# The end-user should decide this...
# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units  = 1

# [profile.dev.package."*"]
# opt-level = 3

[features]
default = ["map-file"]
sse2only = ["minimap2-sys/sse2only"]
htslib = ['rust-htslib']
simde = ["minimap2-sys/simde"]
map-file = ["needletail", "simdutf8"]
zlib-ng = ["minimap2-sys/zlib-ng"]
curl = ["rust-htslib/curl"]
static = ["minimap2-sys/static", "rust-htslib/static"]

[package.metadata.docs.rs]
features = ["map-file", "htslib"]
