[package]
name = "fakeminimap2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimap2 = "0.1.16+minimap2.2.26"
crossbeam = "0.8.2"
needletail = "0.5.1"
fern = { version = "0.6.2", features = ["colored", "chrono"] }
humantime = "2.1.0"
log = "0.4.20"
colored = { version = "2.0.4", features = ["no-color"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3
