[package]
name = "fakeminimap2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimap2 = { path = "../", version = "0.1.21+minimap2.2.28" }
crossbeam = "0.8.4"
needletail = "0.6"
humantime = "2.1.0"
log = "0.4.22"
flexi_logger = "0.29"
clap = { version = "4.5.21", features = ["derive"] }
rayon = "1.10.0"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
tachyonfx = "0.9.3"
tokio-stream = { version = "0.1.16", features = ["sync"] }
num-format = { version = "0.4.4", features = ["with-system-locale"] }
dashmap = "6.1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3
