[package]
name = "minimap2-sys"
version = "0.1.9"
edition = "2021"
links = "libminimap2"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Bindings to libminimap2"
repository = "https://github.com/jguhlin/minimap2-rs"
categories = ["science", "external-ffi-bindings"]
keywords = ["bioinformatics", "fasta", "alignment", "ffi", "fastq"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
	"target",
	"Cargo.lock",
	"/minimap2/lib/simde/test",
	".circlci",
	".notest",
	".github",
	"docker",
	"/mm2-fast/ext/TAL",
	"/mm2-fast/lib/simde/test/",
	".*",
	"/mm2-fast/test",
	"/minimap2/test",
	"/mm2-fast/test_bench/"

]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libz-sys = { version = "1.1.8", default-features = false, features = ["libc"] }

[build-dependencies]
pkg-config = "0.3.26"
libc = "0.2"

[build-dependencies.bindgen]
optional = true
version = "0.63"
default-features = false
features = ["runtime", "which-rustfmt"]

[build-dependencies.cc]
version = "1.0.78"

[features]
default = []
vendored = ["bindgen"]
mm2-fast = []
sse = []
simde = []