[package]
name = "minimappers2"
version = "0.1.6"
edition = "2021"

[lib]
name = "minimappers2"
crate-type = ["cdylib", "rlib"]

[dependencies]
minimap2 = { path = "../", version = "0.1.21+minimap2.2.28", features = ["simde", "zlib-ng"] }
crossbeam = "0.8.4"
mimalloc = { version = "0.1.43", default-features = false }

pyo3 = { version = "0.21" }
polars = "0.44"
pyo3-polars = "0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["pyo3/extension-module", "pyo3/abi3-py37"]
