[package]
name = "minimappers2"
version = "0.1.7"
edition = "2021"

[lib]
name = "minimappers2"
crate-type = ["cdylib", "rlib"]

[dependencies]
minimap2 = { version = "0.1.23", features = ["simde"], path = ".." }
crossbeam = "0.8.4"
mimalloc = {version = "0.1", default-features = false }

pyo3 = { version = "0.22" }
polars = "0.45"
pyo3-polars = "0.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["pyo3/extension-module", "pyo3/abi3-py37"]
